Create new backend notification endpoint
