# backend-flask/openapi-3.0.yml
@@ -6,21 +6,6 @@ info:
 servers:
   - url: https://api.server.test/v1
 paths:
-   /api/activities/notifications:
-    get:
-      description: 'return a feed of activities for all those i follow'
-      tags:
-        - activies
-      parameters: []
-      responses:
-        '200':
-          description: return array of activities
-          content:
-            application/json:
-              schema:
-               type: array
-               items: 
-                $ref: '#/components/schemas/Activity'
    /api/activities/home:
     get:
       description: 'Return a feed of activity based on all users'
@@ -163,6 +148,21 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Message'
+   /api/activities/notifications:
+    get:
+      description: 'return a feed of activities for all those i follow'
+      tags:
+        - activies
+      parameters: []
+      responses:
+        '200':
+          description: return array of activities
+          content:
+            application/json:
+              schema:
+               type: array
+               items: 
+                $ref: '#/components/schemas/Activity'
 
 components:
   schemas:
